--- a/style.css
+++ b/style.css
@@ -84,3 +84,19 @@ a[href="#design"] {
 
 
 /* Hieronder komen jouw animaties en stijlen */
+
+@keyframes scale {
+  0% { 
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.3);
+  }
+}
+
+.scale{
+  animation-name: scale;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
