--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ a[href="#design"] {
 
 /* Hieronder komen jouw animaties en stijlen */
 
+/* frontend button */
 @keyframes scale {
   0% { 
     transform: scale(1);
@@ -100,3 +101,27 @@ a[href="#design"] {
   animation-duration: 1s;
   animation-iteration-count: 1;
 }
+
+
+
+/* and button */
+@keyframes and {
+  0% {
+    translate: 0 0;
+  }
+
+  50%{
+    translate: 0 -1em ;
+  }
+
+  100% {
+    translate: 0 0;
+  }
+}
+
+.and{
+  animation-name: and;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+}
+
