--- a/style.css
+++ b/style.css
@@ -91,8 +91,12 @@ a[href="#design"] {
     transform: scale(1);
   }
 
-  100% {
+  50% {
     transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
 
@@ -125,3 +129,33 @@ a[href="#design"] {
   animation-iteration-count: 1;
 }
 
+
+/* doubleclick button*/
+
+@keyframes dblclick {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(5deg);
+  }
+
+  50% {
+    transform: rotate(0deg);
+  }
+
+  75% {
+    transform: rotate(-5deg);
+  }
+
+  100% {
+    transform: rotate(0);
+  }
+}
+
+.dblclick {
+  animation-name: dblclick;
+  animation-duration: .3s;
+  animation-iteration-count: 4;
+}
