--- a/style.css
+++ b/style.css
@@ -159,3 +159,33 @@ a[href="#design"] {
   animation-duration: .3s;
   animation-iteration-count: 4;
 }
+
+
+/* sprint 5 Kleuren */
+  @keyframes kleuren {
+    0% {
+      background-color: #050840;
+      color: green;
+    }
+
+    25% {
+      background-color: green;
+      color: yellow;
+    }
+
+    50% {
+      background-color: yellow;
+      color: red;
+    }
+
+    75% {
+      background-color: red;
+      color: #050840;
+    }
+
+    100% {
+      background-color: #050840;
+    }
+  }
+
+  .kleuren {
