--- a/style.css
+++ b/style.css
@@ -198,23 +198,21 @@ a[href="#design"] {
   /* The Mouseover Rotate */
   @keyframes rotate {
     0% {
-      transform: rotate(10deg);
+      transform: rotate(0deg);
     }
+
+  
 
     25% {
-      transform: rotate(20deg)
-    }
-
-    50% {
-      transform: rotate(30deg);
+      transform: rotate(45deg);
     }
 
     75% {
-      transform: rotate(40deg);
+      transform: rotate(-45deg);
     }
 
     100% {
-      transform: rotate(50deg);
+      transform: rotate(0deg);
       
     }
   }
@@ -223,4 +221,5 @@ a[href="#design"] {
     animation-name: rotate;
     animation-duration: 2s;
     animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
   }
