--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ a[href="#design"] {
 
 /* Hieronder komen jouw animaties en stijlen */
 
-/* frontend button */
+
+/* frontend  scale */
 @keyframes scale {
   0% { 
     transform: scale(1);
@@ -108,7 +109,7 @@ a[href="#design"] {
 
 
 
-/* and button */
+/* and jump */
 @keyframes and {
   0% {
     translate: 0 0;
@@ -130,7 +131,8 @@ a[href="#design"] {
 }
 
 
-/* doubleclick button*/
+
+/* doubleclick shake*/
 
 @keyframes dblclick {
   0% {
@@ -161,7 +163,8 @@ a[href="#design"] {
 }
 
 
-/* sprint 5 Kleuren */
+
+/* sprint 5 Colors */
   @keyframes kleuren {
     0% {
       background-color: #050840;
@@ -192,4 +195,17 @@ a[href="#design"] {
     animation-name: kleuren;
     animation-duration: 3s;
     animation-iteration-count: 1;
+  }
+
+
+
+  /* fix text change */
+  @keyframes fix {
+    0% {
+      
+    }
+
+    50% {
+      
+    }
   }
